backend working and Unit tested ok

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,8 +2,9 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <title>Kaboodle Blueprint Nothing</title>
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
   <ul class="menu">
@@ -20,6 +21,8 @@
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/ui-angular/ui-bootstrap-0.7.0.js"></script>
+  <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
