--- a/client/app/index.html
+++ b/client/app/index.html
@@ -6,21 +6,29 @@
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
+
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+<div class="navbar">
+    <div class="navbar-inner">
+        <a class="brand" href="#">Kaboodle V2</a>
+        <ul class="nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#/view1">View 1</a></li>
+            <li><a href="#/view2">View 2</a></li>
+        </ul>
+    </div>
+</div>
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+  <div>Version : v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
+  <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/ui-angular/ui-bootstrap-0.7.0.js"></script>
   <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
   <script src="js/app.js"></script>
