--- a/client/app/index.html
+++ b/client/app/index.html
@@ -13,15 +13,13 @@
         <a class="brand" href="#">Kaboodle V2</a>
         <ul class="nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#/view1">View 1</a></li>
-            <li><a href="#/view2">View 2</a></li>
+            <li><a href="#/objects" data-ng-init="setType('All')">Objects</a></li>
+            <li><a href="#/objects" data-ng-init="setType('Project')">Projects</a></li>
         </ul>
     </div>
 </div>
 
   <div ng-view></div>
-
-  <div>Version : v<span app-version></span></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
