--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,18 +8,22 @@
 </head>
 
 <body>
-<div class="navbar">
-    <div class="navbar-inner">
-        <a class="brand" href="#">Kaboodle V2</a>
-        <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#/objects" data-ng-init="setType('All')">Objects</a></li>
-            <li><a href="#/objects" data-ng-init="setType('Project')">Projects</a></li>
-        </ul>
+<div class="row-fluid">
+    <div class="span12">
+        <div class="navbar">
+            <div class="navbar-inner">
+                <a class="brand" href="#">Kaboodle V2</a>
+                <ul class="nav">
+                    <li class="active"><a href="#">Configuration</a></li>
+                    <li><a href="#/projects">test</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div ng-view></div>
+
     </div>
 </div>
-
-  <div ng-view></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
