--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,7 +15,7 @@
                 <a class="brand" href="#">Kaboodle V2</a>
                 <ul class="nav">
                     <li class="active"><a href="#">Configuration</a></li>
-                    <li><a href="#/projects">test</a></li>
+                    <li><a href="#/projects">Lists</a></li>
                 </ul>
             </div>
         </div>
@@ -31,7 +31,7 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
-  <script src="lib/ui-angular/ui-bootstrap-0.7.0.js"></script>
+  <!--<script src="lib/ui-angular/ui-bootstrap-0.7.0.js"></script>-->
   <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
