Started work on View Configuration, have layout now need to add drag and drop .....

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -15,7 +15,7 @@
                 <a class="brand" href="#">Kaboodle V2</a>
                 <ul class="nav">
                     <li class="active"><a href="#">Configuration</a></li>
-                    <li><a href="#/projects">Lists</a></li>
+                    <li><a href="#/projects">Projects</a></li>
                 </ul>
             </div>
         </div>
@@ -38,5 +38,6 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="../bower_components/underscore/underscore.js"></script>
 </body>
 </html>
