Views added dragdrop factory (no codee yet) but am deletimng view fields

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,5 +39,6 @@
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
+  <script src="../bower_components/angular-common/build/angular-common.js"></script>
 </body>
 </html>
