--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,20 +28,18 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-<script src="lib/angular/angular.js"></script>
+  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+  <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
-  <!--<script src="lib/ui-angular/ui-bootstrap-0.7.0.js"></script>-->
   <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
-
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
   <script src="../bower_components/underscore/underscore.js"></script>
-  <script src="../bower_components/angular-common/build/angular-common.js"></script>
+  <script src="lib/ui-sortable-angular1.2/src/sortable.js"></script>
 </body>
 </html>
