--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,38 +8,43 @@
 </head>
 
 <body>
-<div class="row-fluid">
-    <div class="span12">
-        <div class="navbar">
-            <div class="navbar-inner">
-                <a class="brand" href="#">Kaboodle V2</a>
-                <ul class="nav">
-                    <li class="active"><a href="#">Configuration</a></li>
-                    <li><a href="#/projects">Projects</a></li>
-                </ul>
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <a class="brand" href="#">Kaboodle V2</a>
+                    <ul class="nav">
+                        <li class="active"><a href="#">Configuration</a></li>
+                        <li><a href="#/projects">Projects</a></li>
+                    </ul>
+                </div>
             </div>
+
+            <div ng-view></div>
+
         </div>
-
-        <div ng-view></div>
-
     </div>
-</div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
-  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
-  <script src="lib/angular/angular-resource.js"></script>
-  <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="../bower_components/underscore/underscore.js"></script>
-  <script src="lib/ui-sortable-angular1.2/src/sortable.js"></script>
+  <!--<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>-->
+  <!--<script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>-->
+
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/jquery-ui-1.10.3/ui/jquery-ui.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-route.js"></script>
+    <script src="lib/angular/angular-resource.js"></script>
+    <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
+    <script src="lib/moment/moment.min.js"></script>
+    <script src="lib/angular-moment-master/angular-moment.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/filters.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="../bower_components/underscore/underscore.js"></script>
+    <script src="lib/ui-sortable-angular1.2/src/sortable.js"></script>
 </body>
 </html>
