Added Flatly UI, and tidied up a lot of the views and stuff

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Kaboodle Blueprint Nothing</title>
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
+
+    <link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>-->
+    <link rel="stylesheet" href="lib/font-awesome-4.0.3/css/font-awesome.min.css"/>
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css"/>-->
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 
