--- a/client/app/index.html
+++ b/client/app/index.html
@@ -42,6 +42,7 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
+    <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
     <script src="lib/angular-moment-master/angular-moment.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
