--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,7 +43,9 @@
     <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
     <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
+    <!--make bit faster off line-->
     <script src="lib/filepicker/filepicker.js"></script>
+    <!---->
     <script src="lib/angular-moment-master/angular-moment.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
