my  dashboard, iillustrates gfetting user stuff from multiple projects

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,6 +21,7 @@
                     <ul class="nav">
                         <li class="active"><a href="#">Configuration</a></li>
                         <li><a href="#/projects">Projects</a></li>
+                        <li><a href="#/myprojectdashboard/Dave">Dashboard</a></li>
                     </ul>
                 </div>
             </div>
