--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Kaboodle Blueprint Nothing</title>
 
-    <!--<link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>-->
-    <link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>
+    <link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>-->
     <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>-->
     <link rel="stylesheet" href="lib/font-awesome-4.0.3/css/font-awesome.min.css"/>
     <!--<link rel="stylesheet" href="css/bootstrap.min.css"/>-->
