lodash changes made (faster already .......)

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -53,8 +53,10 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/filters.js"></script>
+
     <script src="js/directives.js"></script>
-    <script src="../bower_components/underscore/underscore.js"></script>
+    <!--<script src="../bower_components/underscore/underscore.js"></script>-->
+    <script src="lib/lodash/lodash.js"></script>
     <script src="lib/ui-sortable-angular1.2/src/sortable.js"></script>
 </body>
 </html>
