--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Kaboodle Blueprint Nothing</title>
+  <title>Its just better</title>
 
     <link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>
     <!--<link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>-->
@@ -17,7 +17,7 @@
         <div class="span12">
             <div class="navbar">
                 <div class="navbar-inner">
-                    <a class="brand" href="#">Kaboodle V2</a>
+                    <a class="brand" href="#">OGC Marketing</a>
                     <ul class="nav">
                         <li class="active"><a href="#">Configuration</a></li>
                         <li><a href="#/projects">Projects</a></li>
@@ -44,9 +44,9 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
-    <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
+    <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
     <!--make bit faster off line-->
-    <script src="lib/filepicker/filepicker.js"></script>
+    <!--<script src="lib/filepicker/filepicker.js"></script>-->
     <!---->
     <script src="lib/angular-moment-master/angular-moment.js"></script>
     <script src="js/app.js"></script>
