--- a/client/app/index.html
+++ b/client/app/index.html
@@ -2,17 +2,17 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Its just better</title>
+  <title>K2</title>
 
-    <link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>-->
     <!--<link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>-->
-    <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>-->
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="lib/font-awesome-4.0.3/css/font-awesome.min.css"/>
-    <!--<link rel="stylesheet" href="css/bootstrap.min.css"/>-->
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 
-<body>
+<body>s
     <div class="row-fluid">
         <div class="span12">
             <div class="navbar">
@@ -22,6 +22,7 @@
                         <li class="active"><a href="#">Configuration</a></li>
                         <li><a href="#/projects">Projects</a></li>
                         <li><a href="#/myprojectdashboard/Dave">Dashboard</a></li>
+                        <li><a href="#/lists">Lists</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +45,7 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
-    <script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>
+    <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
     <!--make bit faster off line-->
     <!--<script src="lib/filepicker/filepicker.js"></script>-->
     <!---->
