--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 
-<body>s
+<body>
     <div class="row-fluid">
         <div class="span12">
             <div class="navbar">
