invoice create objects  is working

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>K2</title>
 
-    <!--<link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>-->
+    <link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>
     <!--<link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>-->
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
+    <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>-->
     <link rel="stylesheet" href="lib/font-awesome-4.0.3/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
@@ -46,7 +46,7 @@
     <script src="lib/moment/moment.min.js"></script>
     <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
     <!--make bit faster off line-->
-    <!--<script src="lib/filepicker/filepicker.js"></script>-->
+    <script src="lib/filepicker/filepicker.js"></script>
     <!---->
     <script src="lib/angular-moment-master/angular-moment.js"></script>
     <script src="js/app.js"></script>
