--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>K2</title>
 
-    <link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>
+    <!--<link rel="stylesheet" href="lib/ubuntu/bootstrap.min.css"/>-->
     <!--<link rel="stylesheet" href="lib/flatly/bootstrap.min.css"/>-->
-    <!--<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>-->
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="lib/font-awesome-4.0.3/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
@@ -21,7 +21,7 @@
                         <li class="active"><a href="#">Configuration</a></li>
                         <li><a href="#/projects">Projects</a></li>
                         <li><a href="#/myprojectdashboard/Dave">Dashboard</a></li>
-                        <li><a href="#/lists">Lists</a></li>
+                        <li><a href="#/Reports">Reports</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,7 +46,7 @@
     <script src="lib/moment/moment.min.js"></script>
     <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
     <!--make bit faster off line-->
-    <script src="lib/filepicker/filepicker.js"></script>
+    <!--<script src="lib/filepicker/filepicker.js"></script>-->
     <!---->
     <script src="lib/angular-moment-master/angular-moment.js"></script>
     <script src="js/app.js"></script>
@@ -58,5 +58,6 @@
     <!--<script src="../bower_components/underscore/underscore.js"></script>-->
     <script src="lib/lodash/lodash.js"></script>
     <script src="lib/ui-sortable-angular1.2/src/sortable.js"></script>
+
 </body>
 </html>
