--- a/client/app/index.html
+++ b/client/app/index.html
@@ -44,6 +44,11 @@
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/ui-angular/ui-bootstrap-tpls-0.7.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
+    <script src="lib/highcharts/highstock.js"></script>
+    <script src="lib/highcharts-ng-master/src/highcharts-ng.js"></script>
+
+
+
     <!--<script type="text/javascript" src="//api.filepicker.io/v1/filepicker.js"></script>-->
     <!--make bit faster off line-->
     <!--<script src="lib/filepicker/filepicker.js"></script>-->
